# Annotation-Pipeline-for-Mask-R-CNN

./: README.md  __init__.py  annotation_dataset_20260221_GP_canonical.json  cli.py  exporter.py  merger.py  parsers.py  pyproject.toml  requirements.txt  validator.py
.github/workflows/: annotation_pipeline.yml
annotation_pipeline/: visualizer.py
tests/: test_pipeline.py
